Intentando_Chat_Toxico

--- a/Ficheros_Java/.vscode/settings.json
+++ b/Ficheros_Java/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
   "java.project.sourcePaths": [
     "EjercicioFicheroBloque2/EjFicheroBloque2/src",
+    "EjercicioFicheroBloque2/EjFicheroBloque2",
     "EjercicioFicheroBloque1/ejFicheroBloque1/src",
-    "EjercicioFicheroBloque2/EjFicheroBloque2"
+    "EjercicioCharToxico/chatToxico/src"
   ]
 }
